Added headshot and styling

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<title>Hello World!</title>
 		<script src="script.js"></script>
+		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 
 	<body>
-		<h1>Hello World!</h1>
-		<p>Let's see if this works</p>
+		<h1 id="title">Owen Hunt</h1>
+		<img id="headshot" src="resources/HUNT.png" />
+		<p>Sophomore studying Math and Computer Science</p>
 	</body>
 </html>
