Added more things

--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
 	</head>
 
 	<body>
-		<h1 id="title">Owen Hunt</h1>
-		<img id="headshot" src="resources/HUNT.png" />
-		<p>Sophomore studying Math and Computer Science</p>
+		<div id="header">
+			<h1 id="title">Owen Hunt</h1>
+		</div>
+
+		<div id="headshot">
+			<img src="resources/HUNT.png" />
+			<p>Caption</p>
+		</div>
+
+		<p>Sophomore at UW–Madison, studying Math and Computer Science</p>
+
+		<p><a href="mailto:ohunt2@wisc.edu">Email me!</a></p>
 	</body>
 </html>
