--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 	<body>
 		<div id="header">
-			<h1 id="title">Owen Hunt</h1>
+			<h1 id="title">Owen Hunt – UW–Madison CS</h1>
 		</div>
 
 		<div id="headshot">
 			<img src="resources/HUNT.png" />
-			<p>Caption</p>
+			<p>Photo taken 2019</p>
 		</div>
 
 		<p>Sophomore at UW–Madison, studying Math and Computer Science</p>
