Updated page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Hello World!</title>
+		<title>Owen Hunt – UW–Madison CS</title>
 		<script src="script.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
